fixed noMatches visibility

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -138,7 +138,7 @@ input[type='checkbox'] {
   width: 100%;
 }
 #noMatches{
-  visibility: hidden;
+  display: none;
 }
 #randomPetMessage{
   display: none;
